--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.16",
     "@types/react-dom": "^18.0.6",
+    "@types/react-paginate": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
